# kube-leader-election

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE.md  justfile  release.toml
.github/: create-release.sh  dependabot.yaml
.github/workflows/: ci.yaml  dependabot.yaml  publish.yaml  release-please.yaml
examples/: README.md  shared-lease.rs  simple-lease.rs
src/: lease.rs  lib.rs
tests/: README.md  create-lease.rs  leader-election.rs  lib.rs  release-lease.rs
