[package]
name = "kube-leader-election"
version = "0.18.0"
edition = "2018"
authors = ["Hendrik Maus <aidentailor@gmail.com>"]
description = "Leader election implementations for Kubernetes workloads"
repository = "https://github.com/hendrikmaus/kube-leader-election"
license = "MIT"

[dependencies]
chrono = { version = "0.4", default-features = false }
kube = { version = "0.78", default-features = false, features = ["client"] }
k8s-openapi = { version = "0.17", default-features = false }
serde = "1"
serde_json = "1"
thiserror = "1"
log = "0.4"

[dev-dependencies]
anyhow = "1"
async-std = { version = "1", features = ["attributes", "tokio1", "tokio02"] }
kube = "0.77"
k8s-openapi = { version = "0.17", default-features = false, features = ["v1_24"] }
env_logger = "0.9"
rand = "0.8"
cmd_lib = "1"
