[package]
name = "kube-leader-election"
version = "0.41.0"
edition = "2018"
authors = ["Hendrik Maus <aidentailor@gmail.com>"]
description = "Leader election implementations for Kubernetes workloads"
repository = "https://github.com/hendrikmaus/kube-leader-election"
license = "MIT"

[dependencies]
chrono = { version = "0.4", default-features = false }
kube = { version = "2", default-features = false, features = ["client"] }
k8s-openapi = ">=0.25"
serde = "1"
serde_json = "1"
thiserror = "1"
log = "0.4"

[dev-dependencies]
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
kube = "2.0"
k8s-openapi = { version = ">=0.25", features = ["v1_32"] }
env_logger = "0.10"
rand = "0.8"
cmd_lib = "1"
